--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -250,3 +250,39 @@
         background: var(--color-gradient-light);
     }
 }
+
+/* CSS HOME */
+#home {
+    background: var(--color-gradient-light);
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+h1 {
+    font-family: var(--title-font);
+    font-size: 36px;
+    color: var(--purple-deep);
+    margin-bottom: 20px;
+}
+
+h2 {
+    font-family: var(--body-font);
+    font-size: 24px;
+    color: var(--purple-darker);
+    margin-bottom: 40px;
+}
+
+h2::after {
+    background-color: var(--purple-deep);
+    width: 20%;
+    height: 1px;
+    position: absolute;
+    content: '';
+    bottom: 42%;
+    left: 40%;
+    border-radius: 4px;
+}
