ajuste pq esqueci do id da home no css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -262,21 +262,21 @@
     justify-content: center;
 }
 
-h1 {
+#home h1 {
     font-family: var(--title-font);
     font-size: 36px;
     color: var(--purple-deep);
     margin-bottom: 20px;
 }
 
-h2 {
+#home h2 {
     font-family: var(--body-font);
     font-size: 24px;
     color: var(--purple-darker);
     margin-bottom: 40px;
 }
 
-h2::after {
+#home h2::after {
     background-color: var(--purple-deep);
     width: 20%;
     height: 1px;
