--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,7 +135,7 @@ body {
 .input-field input {
     background-color: transparent;
     color: var(--gray-medium);
-    font-size: 18px;
+    font-size: 16px;
 
     width: 260px;
     border: none;
@@ -343,10 +343,10 @@ body {
     gap: 20px;
 }
 
-#register-inputs .input-field input {
+.name-tel .input-field input {
     background-color: transparent;
     color: var(--gray-medium);
-    font-size: 18px;
+    font-size: 16px;
 
     width: 120px;
     border: none;
