--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
     --purple-light: #c485e0;
     --purple-medium: #8c46ac;
     --purple-dark: #5c4681;
-    --purple-darker: #3b2152;
+    --purple-darker: #3d2552;
     --purple-deep: #2a1d44;
     --purple-deeper: #1d152e;
 
